; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_ShapeCharGlyphProp_Oriya.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_ShapeCharGlyphProp_Oriya.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@oriya_lex = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32*, i32*, i32, i32*, i32, i32*, i32*, i32*)* @ShapeCharGlyphProp_Oriya to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ShapeCharGlyphProp_Oriya(i32 %0, i32* %1, i32* %2, i32* %3, i32 %4, i32* %5, i32 %6, i32* %7, i32* %8, i32* %9) #0 {
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  store i32 %0, i32* %11, align 4
  store i32* %1, i32** %12, align 8
  store i32* %2, i32** %13, align 8
  store i32* %3, i32** %14, align 8
  store i32 %4, i32* %15, align 4
  store i32* %5, i32** %16, align 8
  store i32 %6, i32* %17, align 4
  store i32* %7, i32** %18, align 8
  store i32* %8, i32** %19, align 8
  store i32* %9, i32** %20, align 8
  %21 = load i32, i32* %11, align 4
  %22 = load i32*, i32** %12, align 8
  %23 = load i32*, i32** %13, align 8
  %24 = load i32*, i32** %14, align 8
  %25 = load i32, i32* %15, align 4
  %26 = load i32*, i32** %16, align 8
  %27 = load i32, i32* %17, align 4
  %28 = load i32*, i32** %18, align 8
  %29 = load i32*, i32** %19, align 8
  %30 = load i32*, i32** %20, align 8
  %31 = load i32, i32* @oriya_lex, align 4
  %32 = load i32, i32* @TRUE, align 4
  %33 = load i32, i32* @TRUE, align 4
  %34 = call i32 @ShapeCharGlyphProp_BaseIndic(i32 %21, i32* %22, i32* %23, i32* %24, i32 %25, i32* %26, i32 %27, i32* %28, i32* %29, i32* %30, i32 %31, i32 %32, i32 %33)
  ret void
}

declare dso_local i32 @ShapeCharGlyphProp_BaseIndic(i32, i32*, i32*, i32*, i32, i32*, i32, i32*, i32*, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
